# Unitify

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  measurement_report.txt
include/: CompoundUnit.h  IOStreamHandler.h  Length.h  Mass.h  Measurement.h  MeasurementFileProcessor.h  MeasurementValidator.h  ReportGenerator.h  StatisticsCalculator.h  TimeUnit.h  UnitConverter.h  Units.h  Volume.h
src/: CompoundUnit.cpp  IOStreamHandler.cpp  Measurement.cpp  MeasurementFileProcessor.cpp  MeasurementValidator.cpp  ReportGenerator.cpp  StatisticsCalculator.cpp  TestCompoundUnits.cpp  TestUnitify.cpp  UnitConverter.cpp  UnitImplementations.cpp  Units.cpp  main.cpp
testFileGenerator/: RandomMeasurementGenerator  randomMeasurementGenerator.cpp  year1measurements.txt  year2measurements.txt
